--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="label">CONFIRM PASSWORD</span>
           </div>
         </div>
-        <div class="log-in">Already have an account? <a href="/log-in.html">Log in</a></div>
+        <div class="log-in">Already have an account? <a href="./log-in.html">Log in</a></div>
         <button>Sign up</button>
       </form>
     </div>
