--- a/log-in.html
+++ b/log-in.html
@@ -37,7 +37,7 @@
         </a>
       </div>
     </div>
-    <div class="sign-up">Don't have an account? <a href="/index.html">Sign up</a></div>
+    <div class="sign-up">Don't have an account? <a href="./index.html">Sign up</a></div>
   </div>
 </body>
 </html>
